Bug 51163 - Settings::editingBehaviorType() incorrectly returns mac for the gtk build when running tests
Summary: Settings::editingBehaviorType() incorrectly returns mac for the gtk build whe...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Linux
: P2 Normal
Assignee: Antonio Gomes
URL:
Keywords:
Depends on:
Blocks: 49873 51261
  Show dependency treegraph
 
Reported: 2010-12-15 21:04 PST by Benjamin (Ben) Kalman
Modified: 2010-12-17 09:17 PST (History)
6 users (show)

See Also:


Attachments
patch v1 (committed r74269, r=mrobinson) (17.10 KB, patch)
2010-12-16 19:24 PST, Antonio Gomes
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin (Ben) Kalman 2010-12-15 21:04:45 PST
As in summary, Settings::editingBehaviorType() incorrectly returns mac (EditingMacBehavior) for gtk *when running tests*.  When running the gtk launcher (i.e. *not* in a test), it correctly returns unix (EditingUnixBehavior).

This is causing a confusing discrepancy in reported test results versus actual behavior, in at least editing/selection/extend-selection-home-end.html.  Note how the mac and gtk results are the same, when actually the gtk results should the same as the win ones (and this is caused by the check in SelectionController::positionForPlatform).
Comment 2 Antonio Gomes 2010-12-16 06:23:13 PST
I will look at this today.
Comment 3 Antonio Gomes 2010-12-16 19:24:41 PST
Created attachment 76841 [details]
patch v1 (committed r74269, r=mrobinson)

1) Make GTK+ reset its editing behavior to UNIX (default) instead of Mac in DumpRenderTree::resetDefaultsToConsistentValues
2) Removes gtk and win expectation files for editing/selection/extend-selection-home-end.html since they are equal to the cross platform result.
Comment 4 Ryosuke Niwa 2010-12-16 19:32:21 PST
Comment on attachment 76841 [details]
patch v1 (committed r74269, r=mrobinson)

LGTM.  Thanks for fixing this bug :)
Comment 5 Antonio Gomes 2010-12-17 08:19:36 PST
Comment on attachment 76841 [details]
patch v1 (committed r74269, r=mrobinson)

Clearing flags on attachment: 76841

Committed r74269: <http://trac.webkit.org/changeset/74269>
Comment 6 WebKit Review Bot 2010-12-17 08:55:44 PST
http://trac.webkit.org/changeset/74269 might have broken GTK Linux 64-bit Debug
Comment 7 Antonio Gomes 2010-12-17 09:14:23 PST
(In reply to comment #6)
> http://trac.webkit.org/changeset/74269 might have broken GTK Linux 64-bit Debug

Fixed in http://trac.webkit.org/changeset/74273 with the test rebasilined, and filed bug 51261 for the proper fix.