2010-12-16  Antonio Gomes  <agomes@rim.com>

Reviewed by Martin Robinson.

        Settings::editingBehaviorType() incorrectly returns mac for the gtk build when running tests
        https://bugs.webkit.org/show_bug.cgi?id=51163

        WebKitTools:
        Since GTK+'s default editing behavior was changed to UNIX in r70975 (see webkitwebsettings.cpp),
        GTK+'s DRT should also reset to UNIX after each test execution.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):

        LayoutTests:
        Removed platform specific expected result files for gtk and windows
        for editing/selection/extend-selection-home-end.html, since they all match
        the cross platform result file.

        Note: chromium-win and mac still have their own expected file each.

        * platform/gtk/editing/selection/extend-selection-home-end-expected.txt: Removed.
        * platform/win/editing/selection/extend-selection-home-end-expected.txt: Removed.

Canonical link: https://commits.webkit.org/64611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74269 268f45cc-cd09-0410-ab3c-d52691b4dbfc